<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="co.herovitamin.androiddesignsupportlibraryapplication.NavigationActivity">
    <group
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_item_1"
            android:checked="true"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/navigation_item_1"/>
        <item
            android:id="@+id/navigation_item_2"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/navigation_item_2"/>
        <item
            android:id="@+id/navigation_subheader"
            android:title="@string/navigation_subheader">
            <menu>
                <item
                    android:id="@+id/navigation_sub_item_1"
                    android:icon="@android:drawable/ic_menu_search"
                    android:title="@string/navigation_sub_item_1"/>
                <item
                    android:id="@+id/navigation_sub_item_2"
                    android:icon="@android:drawable/ic_menu_search"
                    android:title="@string/navigation_sub_item_2"/>
                <item
                    android:id="@+id/navigation_sub_item_3"
                    android:icon="@android:drawable/ic_menu_search"
                    android:title="@string/navigation_sub_item_2"/>
            </menu>
        </item>
    </group>
</menu>